Update 'fuw9bdv98-python' component image to: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-python:44cfd9432c9d8a50098a2ca0ccfda108af46d6cf@sha256:3afab9a432012b44685dce5773c6949f1fb80625e844b1eff9b0b6a6dff26c21

--- a/components/fuw9bdv98-python/overlays/development/deployment-patch.yaml
+++ b/components/fuw9bdv98-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: fuw9bdv98-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-python:44cfd9432c9d8a50098a2ca0ccfda108af46d6cf@sha256:3afab9a432012b44685dce5773c6949f1fb80625e844b1eff9b0b6a6dff26c21
+          name: container-image
